--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -43,78 +43,85 @@
           <p><strong>Geburtsdatum & -ort:</strong> 11. November 1955, Brilon</p>
           <p><strong>Partei:</strong> Christlich Demokratische Union (CDU)</p>
           <p>
-            <strong>Aktuelles Amt:</strong> Vorsitzender der CDU (seit Januar
-            2022), Kanzlerkandidat der Union für die Bundestagswahl 2025
+            <strong>Aktuelles Amt:</strong> Bundeskanzler der Bundesrepublik
+            Deutschland (seit Mai 2025)
           </p>
 
           <h3>Bildung & Berufslaufbahn</h3>
           <p>
-            <strong>Studium:</strong> Friedrich Merz studierte von 1976 bis 1982
-            Rechtswissenschaften an der Universität Bonn und legte 1985 das
-            Erste Juristische Staatsexamen ab. Anschließend absolvierte er sein
-            Referendariat und legte 1986 das Zweite Juristische Staatsexamen ab.
+            <strong>Jurist:</strong> Studium in Bonn, Richter am Amtsgericht
+            (kurzzeitig), danach Rechtsanwalt. Merz weiß also theoretisch, was
+            Recht und Gesetz sind – auch wenn er sie politisch gerne biegt.
           </p>
           <p>
-            <strong>Berufsausbildung und Berufserfahrung:</strong> Merz
-            arbeitete zunächst als Richter am Amtsgericht Saarbrücken
-            (1986–1989). Ab 1989 war er als Rechtsanwalt tätig, unter anderem
-            von 2002 bis 2004 bei der Kanzlei Cornelius Bartenbach Haesemann und
-            Partner in Köln. Seit 2016 ist er Aufsichtsratsvorsitzender der
-            deutschen Tochtergesellschaft von BlackRock, was ihm erheblichen
-            Einfluss in der Wirtschaft verschaffte.
+            <strong>Die "BlackRock"-Jahre:</strong>
+            Bevor er Deutschland übernahm, übte er an der Wirtschaft: Als
+            Aufsichtsratsvorsitzender von BlackRock Deutschland (2016–2020)
+            knüpfte er die Kontakte, die ihm heute als "Kanzler der Konzerne"
+            sicher nicht schaden. Kritiker nannten es Lobbyismus, er nannte es
+            wohl Vorbereitung.
           </p>
           <p>
-            <strong>Persönliches Leben:</strong> Seit 1981 ist Merz mit
-            Charlotte Merz, einer deutschen Chemikerin und späteren Richterin,
-            verheiratet. Das Paar hat drei Kinder und lebt in Arnsberg im
-            Sauerland.
+            <strong>Privat:</strong> Verheiratet mit Charlotte Merz, drei
+            Kinder, Hobby-Pilot eines eigenen Flugzeugs (was ihn sicher sehr nah
+            an die Lebensrealität der Geringverdiener bringt).
           </p>
 
           <h3>Politische Laufbahn</h3>
           <p>
-            <strong>März 2025:</strong> Führender Kanzlerkandidat der Union nach
-            der Bundestagswahl 2025, Verhandlungen über Koalition und
-            Politikwechsel (Stand März 2025)
-          </p>
-          <p><strong>2022 – heute:</strong> Vorsitzender der CDU</p>
-          <p>
-            <strong>2002 – 2004:</strong> Stellvertretender Vorsitzender der
-            CDU/CSU-Bundestagsfraktion (Rücktritt Dezember 2004)
+            <strong>Seit 05/2025:</strong> Bundeskanzler (Kabinett Merz I) in
+            einer GroKo mit der 16%-SPD.
           </p>
           <p>
-            <strong>2000 – 2002:</strong> Vorsitzender der
-            CDU/CSU-Bundestagsfraktion und Oppositionsführer
+            <strong>02/2025:</strong> Wahlsieger der Bundestagswahl (28,5 %).
+          </p>
+          <p><strong>2022 – heute:</strong> Vorsitzender der CDU.</p>
+          <p>
+            <strong>2009 – 2021:</strong> Die "Schmollecke": Rückzug aus der
+            Politik in die freie Wirtschaft, nachdem er den Machtkampf gegen
+            Angela Merkel verloren hatte.
           </p>
           <p>
-            <strong>1994 – 2009:</strong> Mitglied des Deutschen Bundestages
-            (Wahlkreis Hochsauerlandkreis, bestes Ergebnis 2005 mit 57,7 %)
-          </p>
-          <p>
-            <strong>1989 – 1994:</strong> Mitglied des Europäischen Parlaments
+            <strong>2000 – 2002:</strong> Unions-Fraktionsvorsitzender (bis
+            Merkel ihn verdrängte).
           </p>
 
           <h3>Politische Positionen</h3>
           <p>
-            <strong>Schwerpunkte:</strong> Merz’ Standpunkte ändern sich häufig:
-            von fiskalischer Disziplin zu Neuverschuldung, von harter
-            Migrationspolitik zu flexibleren Ansätzen.
+            <strong>Schwerpunkte:</strong> Flexibilität. Merz schafft das
+            Kunststück, gleichzeitig als konservativer Hardliner und als
+            Erfüller sozialdemokratischer Ausgabenträume aufzutreten – je
+            nachdem, was für den Machterhalt gerade nötig ist.
           </p>
 
           <h3>FACTS</h3>
           <p>
-            Im Wahlkampf 2025 versprach Friedrich Merz eine harte Linie bei der
-            Schuldenbremse und keine Steuererhöhungen. Wenige Wochen nach der
-            Wahl jedoch plant er ein 500-Milliarden-Euro-Investitionsprogramm
-            mit der SPD und Ausnahmen von der Schuldenbremse – ein klarer Bruch
-            seiner fiskalischen Versprechen, der ihn den Vorwurf des
-            „Wortbruchs“ einbrachte.
+            Friedrich Merz hat sein Lebensziel erreicht: Er ist Kanzler. Dafür
+            musste er nur sämtliche Prinzipien über Bord werfen, die er im
+            Wahlkampf 2025 noch heiliggesprochen hatte. Mit mageren 28,5 % der
+            Stimmen rettete er sich in eine Koalition mit einer historisch
+            schwachen SPD (16,4 %), da sein Wunschpartner FDP an der 5%-Hürde
+            scheiterte.
           </p>
+
           <p>
-            Vor der Wahl 2025 forderte Merz Zurückweisungen an den Grenzen und
-            einen Aufnahmestopp nach dem Solingen-Anschlag 2024. Nach der Wahl
-            erklärte er plötzlich, dass „niemand ernsthaft von geschlossenen
-            Grenzen“ rede, was als Rückzieher von seiner harten Migrationslinie
-            gewertet wird und ihm Opportunismus-Vorwürfe einbrachte.
+            <strong>Wahlversprechen vs. Realität (Dezember 2025):</strong><br />
+            Im Wahlkampf inszenierte sich Merz als Gralshüter der
+            <strong>Schuldenbremse</strong> („Keine Aufweichung mit mir!“). Kaum
+            im Amt, segnete er mit der SPD ein
+            500-Milliarden-Euro-Investitionspaket ab, das die Schuldenbremse
+            faktisch beerdigt. Er nennt es „ökonomische Vernunft“, Wähler nennen
+            es Wortbruch.
+          </p>
+
+          <p>
+            Ähnlich beim Thema <strong>Migration</strong>: Nach Solingen
+            forderte Merz noch lautstark Aufnahmestopps und Zurückweisungen
+            („Die Grenzen müssen dicht sein!“). Als Kanzler erklärte er
+            plötzlich, dass „niemand ernsthaft von geschlossenen Grenzen rede“.
+            Diese 180-Grad-Wende sicherte ihm den Koalitionsfrieden mit der SPD,
+            kostete ihn aber den letzten Rest Glaubwürdigkeit im konservativen
+            Lager.
           </p>
         </div>
 
