--- a/gruene/baerbock/index.html
+++ b/gruene/baerbock/index.html
@@ -45,49 +45,71 @@
           </p>
           <p><strong>Partei:</strong> Bündnis 90/Die Grünen</p>
           <p>
-            <strong>Aktuelles Amt:</strong> Expertin für feministische
-            Außenpolitik
+            <strong>Aktuelles Amt:</strong> Präsidentin der
+            UN-Generalversammlung (seit September 2025)
           </p>
 
           <h3>Bildung & Berufslaufbahn</h3>
           <p>
-            <strong>Studium:</strong> Baerbock absolvierte ein Diplomstudium der
-            Politikwissenschaften ohne abschließenden Abschluss und erhielt
-            ihren Master in Internationalem Recht an der London School of
-            Economics, obwohl sie kein Bachelorzeugnis vorweisen konnte.
+            <strong>Studium:</strong> Studium der Politikwissenschaft (Hamburg)
+            und des Völkerrechts (LSE London). Ihr Lebenslauf erlangte 2021
+            traurige Berühmtheit, da er mehrfach "kreativ korrigiert" werden
+            musste, um Lücken und Übertreibungen zu kaschieren.
           </p>
 
           <p>
-            <strong>Berufsausbildung und Berufserfahrung:</strong> Baerbock hat
-            keine abgeschlossene Berufsausbildung und keine nennenswerte
-            Berufserfahrung außerhalb der Politik. 2021 geriet sie aufgrund von
-            Plagiatsvorwürfen in ihrem Buch „Jetzt. Wie wir unser Land erneuern“
-            in die Kritik, da Passagen aus anderen Quellen ohne korrekte
-            Quellenangabe übernommen wurden.
+            <strong>Berufserfahrung:</strong> Baerbock ist das Paradebeispiel
+            einer Karriere im politischen Elfenbeinturm: Vom Büroleiterin-Job
+            direkt in den Bundestag und ins Ministeramt – ohne nennenswerte
+            Berührungspunkte mit der freien Wirtschaft. 2021 musste sie zudem
+            Plagiate in ihrem Buch „Jetzt“ einräumen, was ihre Eignung für das
+            Kanzleramt frühzeitig in Frage stellte.
           </p>
 
           <h3>Politische Laufbahn</h3>
-          <p><strong>Seit 2013:</strong> Mitglied des Deutschen Bundestages</p>
-          <p><strong>Seit 2021:</strong> Bundesministerin des Auswärtigen</p>
+          <p>
+            <strong>Seit 09/2025:</strong> Präsidentin der UN-Generalversammlung
+            in New York (Karriere-Sprung nach oben).
+          </p>
+          <p>
+            <strong>2021 – 05/2025:</strong> Bundesministerin des Auswärtigen
+            (Kabinett Scholz).
+          </p>
+          <p>
+            <strong>2013 – 06/2025:</strong> Mitglied des Deutschen Bundestages
+            (Mandat niedergelegt).
+          </p>
 
           <h3>Politische Positionen</h3>
           <p>
-            <strong>Schwerpunkte:</strong> Klimaschutz, Außenpolitik, Migration,
-            Feminismus
+            <strong>Schwerpunkte:</strong> Feministische Außenpolitik (Moral
+            über Diplomatie), Klimaschutz und Waffenlieferungen
+            ("Kriegsmüdigkeit gibt es nicht").
           </p>
 
           <h3>FACTS</h3>
           <p>
-            Annalena Baerbock sorgte wiederholt für Aufsehen, etwa durch
-            Plagiatsvorwürfe und ihre auffällige Unfähigkeit, klare und
-            verständliche Sätze zu formulieren.
+            Annalena Baerbock hat 2025 den ultimativen politischen Zaubertrick
+            vollbracht:
+            <strong>Das "Wegloben" auf internationaler Ebene.</strong>
+            Nachdem die Ampel-Regierung abgewählt war, verkündete sie im März
+            2025 zunächst den Rückzug aus der Fraktionsführung aus „privaten
+            Gründen“. Wie praktisch, dass diese privaten Gründe kurz darauf in
+            einen prestigeträchtigen Posten in New York mündeten.
           </p>
           <p>
-            2023 sprach sie vom „Krieg gegen Russland“ und äußerte, dass sich
-            Russland „um 360 Grad drehen müsste“, um den Krieg zu beenden.
+            Anstatt im Bundestag Verantwortung für die Bilanz der Ampel zu
+            übernehmen, legte sie ihr Mandat im Juni 2025 nieder und residiert
+            nun als UN-Präsidentin fernab der deutschen Wählerrealität.
           </p>
           <p>
-            Zudem stimmte Baerbock 2022 für eine allgemeine Corona-Impfpflicht.
+            <strong>Ihr Vermächtnis als Ministerin:</strong>
+            Unvergessen bleiben ihre geografischen Neuentdeckungen („Länder, die
+            hunderttausende Kilometer entfernt liegen“) und mathematischen
+            Revolutionen (Putin solle sich um „360 Grad drehen“). Auch ihr Satz
+            „Wir führen einen Krieg gegen Russland“ sorgte international für
+            Schnappatmung. Nun darf sie diese Weisheiten auf der ganz großen
+            Weltbühne verbreiten.
           </p>
         </div>
         <img
