--- a/gruene/fester/index.html
+++ b/gruene/fester/index.html
@@ -39,49 +39,55 @@
     <section class="party-bio">
       <div class="bio-container">
         <div class="bio-text">
-          <p><strong>Name:</strong> Emilia Fester</p>
+          <p><strong>Name:</strong> Emilia Johanna „Milla“ Fester</p>
           <p>
             <strong>Geburtsdatum & -ort:</strong> 28. April 1998, Hildesheim
           </p>
           <p><strong>Partei:</strong> Bündnis 90/Die Grünen</p>
           <p>
-            <strong>Aktuelles Amt:</strong> Mitglied des Deutschen Bundestages
+            <strong>Aktuelles Amt:</strong> Keines. Nach Abwahl nun Aktivistin bei Sea-Eye (seit Herbst 2025)
           </p>
 
           <h3>Bildung & Berufslaufbahn</h3>
           <p>
-            <strong>Studium:</strong> Kein abgeschlossenes Studium oder
-            nachweisbare akademische Ausbildung.
+            <strong>Ausbildung:</strong> Lange Zeit das Gesicht der „Kreisssaal-Hörsaal-Plenarsaal“-Kritik (nur ohne Hörsaal-Abschluss). Doch nach dem unfreiwilligen Ausscheiden aus dem Bundestag 2025 hat sie tatsächlich Neuland betreten: Im Frühling 2025 absolvierte sie eine Ausbildung zur Rettungssanitäterin.
           </p>
 
           <p>
-            <strong>Berufsausbildung und Berufserfahrung:</strong> Fester hat
-            keine abgeschlossene Berufsausbildung oder nennenswerte
-            Berufserfahrung außerhalb der Politik. Ihre politische Laufbahn
-            begann als Aktivistin und führte direkt ins Parlament.
+            <strong>Berufserfahrung:</strong> Vier Jahre lang jüngste Abgeordnete im Bundestag ohne vorherige Berufspraxis. Jetzt sammelt sie ihre erste "echte" Arbeitserfahrung im Basecamp der NGO Sea-Eye auf Sizilien – finanziert durch Spenden, da die staatlichen Förderungen unter der neuen Regierung gestrichen wurden.
           </p>
 
           <h3>Politische Laufbahn</h3>
-          <p><strong>Seit 2021:</strong> Mitglied des Deutschen Bundestages</p>
+          <p>
+            <strong>Seit Herbst 2025:</strong> Aktivistin bei Sea-Eye (Flucht in die NGO-Szene).
+          </p>
+          <p>
+            <strong>2021 – 02/2025:</strong> Mitglied des Deutschen Bundestages.
+          </p>
+          <p>
+            <strong>02/2025:</strong> Scheitern bei der Bundestagswahl (Der Wähler beendete das Experiment).
+          </p>
 
           <h3>Politische Positionen</h3>
           <p>
-            <strong>Schwerpunkte:</strong> Klimaschutz, Jugendbeteiligung,
-            Feminismus, Migration
+            <strong>Schwerpunkte:</strong> „Kollektive Freiheit“ (bedeutet: Zwang für alle), Wahlrecht für Kleinkinder, Tanzen im Parlament und neuerdings Seenotrettung.
           </p>
 
           <h3>FACTS</h3>
           <p>
-            Emilia Fester war bei ihrer Wahl in den Bundestag 2021 mit 23 Jahren die jüngste Abgeordnete. 
+            Emilia Fester war das Symbolbild der jungen, unerfahrenen Grünen-Fraktion. 2025 verpasste sie den Wiedereinzug in den Bundestag deutlich – die Wähler hatten offenbar genug von Tanzvideos im Plenarsaal und moralischen Belehrungen ohne Lebenserfahrung.
           </p>
+
           <p>
-            Für Belustigung sorgte sie mit ihrer Forderung nach Wahlrecht für Zweijährige und 
-            ihrer dramatischen Rede zur Impfpflicht, in der sie behauptete, ihre Jugend geopfert zu haben, während sie tatsächlich verreist war. 
+            <strong>Die legendäre „Opfer“-Rede:</strong>
+            Unvergessen bleibt ihr Auftritt zur Impfpflicht 2022, in dem sie hysterisch schrie, sie habe ihre Jugend geopfert, sei „nicht an der Uni“ gewesen und habe keine fremden Menschen küssen können. Faktencheck: Sie war an keiner Uni eingeschrieben, machte während der Pandemie Urlaub in Dänemark (ohne Maskenpflicht) und das „Küssen von Fremden“ ist wohl kaum eine Staatsaufgabe.
           </p>
+
           <p>
-            Zudem stimmte sie 2022 für eine allgemeine Corona-Impfpflicht.
+            <strong>Vom Parlament nach Sizilien:</strong>
+            Noch im September 2024 beschwerte sie sich, dass man zu viel über Asylgesetzgebung diskutiere. Die Ironie: Genau in diesem Bereich arbeitet sie jetzt. Nach dem Verlust ihres Mandats heuerte sie bei der NGO <strong>Sea-Eye</strong> an. Während sie früher beklagte, nicht reisen zu können, postet sie nun Fotos aus dem Zug nach Rom auf dem Weg ins Basecamp auf Sizilien. Ein klassischer Karriereweg: Wenn der Wähler einem das Mandat entzieht, flüchtet man sich in die moralische Überlegenheit des Aktivismus.
           </p>
-          </div>
+        </div>
           
         <img
           class="bio-image"
