--- a/gruene/ganserer/index.html
+++ b/gruene/ganserer/index.html
@@ -6,7 +6,7 @@
     <title>Markus (Tessa) Ganserer | factico.</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
-    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../../styles.css" />
   </head>
   <body class="gruene-root">
     <header class="party-header">
@@ -43,56 +43,83 @@
           <p><strong>Geburtsdatum & -ort:</strong> 16. Mai 1977, Zwiesel</p>
           <p><strong>Partei:</strong> Bündnis 90/Die Grünen</p>
           <p>
-            <strong>Aktuelles Amt:</strong> Mitglied des Deutschen Bundestages
-            (MdB, seit 2021)
+            <strong>Aktuelles Amt:</strong> Keines. Ehemaliges Mitglied des
+            Deutschen Bundestages (2021–2025)
           </p>
 
           <h3>Bildung & Berufslaufbahn</h3>
           <p>
-            <strong>Studium:</strong> Tessa Ganserer studierte von 2000 bis 2005
-            an der Fachhochschule Weihenstephan und absolvierte dort ein Studium
-            in Wald- und Forstwirtschaft. Sie schloss dieses Studium mit dem
-            Titel Diplom-Ingenieurin (FH) ab.
+            <strong>Ausbildung:</strong> Solide Basis: Hauptschulabschluss,
+            Ausbildung zum Forstwirt, später Studium der Wald- und
+            Forstwirtschaft (Dipl.-Ing. FH). Vom Wald ging es dann in den
+            politischen Dschungel der Identitätspolitik.
           </p>
 
           <p>
-            <strong>Berufsausbildung und Berufserfahrung:</strong> Nach dem
-            Hauptschulabschluss 1995 absolvierte Ganserer eine Berufsausbildung
-            zum Forstwirt. Danach besuchte sie die Berufsoberschule, leistete
-            Zivildienst und war in der Folge im Garten- und Landschaftsbau
-            tätig.
-          </p>
-
-          <p>
-            <strong>Persönliches Leben:</strong> Seit 2001 ist Ganserer mit Ines
-            Eichmüller liiert und verheiratet. Das Paar hat zwei Söhne. Im
-            November 2018 machte Ganserer ihre Transidentität öffentlich und war
-            damit die erste Abgeordnete in Deutschland, die ihre Transidentität
-            bekanntgab.
+            <strong>Privat:</strong> Verheiratet mit Ines Eichmüller, zwei
+            Söhne. 2018 machte Ganserer die Transidentität öffentlich – damals
+            noch als Landtagsabgeordneter.
           </p>
 
           <h3>Politische Laufbahn</h3>
-          <p><strong>Oktober 2024:</strong> Ankündigung nicht mehr für den Bundestag zu kandidieren</p>
-          <p><strong>2021 - 2025:</strong> Mitglied des Deutschen Bundestages</p>
-          <p><strong>2013 – 2021:</strong> Mitglied des Bayerischen Landtags</p>
           <p>
-            <strong>2018:</strong> Erste Abgeordnete in Deutschland, die ihre
-            Transidentität öffentlich machte
+            <strong>2021 – 2025:</strong> Mitglied des Deutschen Bundestages
+            (Bündnis 90/Die Grünen).
+          </p>
+          <p>
+            <strong>2013 – 2021:</strong> Mitglied des Bayerischen Landtags.
+          </p>
+          <p>
+            <strong>Oktober 2024:</strong> Ankündigung des Rückzugs aus der
+            Bundespolitik.
           </p>
 
           <h3>Politische Positionen</h3>
           <p>
-            <strong>Schwerpunkte:</strong> Umweltpolitik, Transrechte,
-            Gleichstellung
+            <strong>Schwerpunkte:</strong> Queer-Politik,
+            Selbstbestimmungsgesetz und die Definition, wer oder was eine Frau
+            ist.
           </p>
-          <h3>FACTS</h3>
-          <p>Im Februar 2023 fiel Tessa Ganserer im Bundestag durch ihr transparentes Top auf, das ihren BH sichtbar machte.</p>
-           <p>2022 stellte sie sich bei der Abstimmung zur Corona-Impfpflicht gegen die Linie ihrer Partei und votierte gegen die Zwangsmaßnahme, was man ihr als mutigen Schritt für persönliche Freiheit und Selbstbestimmung anrechnen kann.</p>
-          </p>
-          <p>Markus Ganserer kandidierte 2021 unter dem Namen „Markus (Tessa) Ganserer“ auf einem Frauenlistenplatz der Grünen. Trotz seines männlichen Vornamens und seiner körperlichen Identität wurde er laut Wahlbehörden als Frau geführt, was zu Kritik und dem Einspruch der Initiative „Geschlecht zählt“ führte. Ihm wurde Wahlbetrug vorgeworfen, und das Vorgehen wurde als unwürdig und schädlich für die Glaubwürdigkeit des demokratischen Systems angesehen.</p>
 
+          <h3>FACTS</h3>
+          <p>
+            Tessa Ganserer hat das Parlament 2025 verlassen. Ihr Einzug 2021
+            bleibt jedoch ein Lehrstück grüner Logik: Sie kandidierte unter dem
+            Namen „Markus (Tessa) Ganserer“ auf einem für Frauen reservierten
+            <strong>Frauenlistenplatz</strong>. Obwohl sie zu diesem Zeitpunkt
+            rechtlich und biologisch männlich war, drängte sie damit biologische
+            Frauen von der Liste. Kritik daran wies die Partei als
+            transfeindlich zurück – Fakten spielten keine Rolle.
+          </p>
+
+          <p>
+            <strong>Der Abgang:</strong>
+            Im Oktober 2024 kündigte sie an, nicht mehr zu kandidieren. Die
+            Begründung: „Menschenverachtender Hass“. Dass Kritik an der
+            Besetzung von Frauenplätzen durch biologische Männer oder an
+            bizarren Auftritten vielleicht auch legitime politische
+            Meinungsäußerung sein könnte, kam in dieser Analyse nicht vor.
+          </p>
+
+          <p>
+            <strong>Stilfragen:</strong>
+            Im Februar 2023 sorgte Ganserer für Irritationen, als sie im
+            Bundestag in einem transparenten Top erschien, das den BH deutlich
+            sichtbar machte. Ein modisches Statement, das manchen Wählern mehr
+            im Gedächtnis blieb als ihre legislative Arbeit.
+          </p>
+
+          <p>
+            <strong>Ein seltener Lichtblick:</strong>
+            Fairerweise muss erwähnt werden: 2022 stimmte Ganserer
+            <strong>gegen</strong> die allgemeine Corona-Impfpflicht und stellte
+            sich damit mutig gegen die Fraktionsdisziplin der Grünen. Ein
+            seltener Moment, in dem persönliche Freiheit über kollektiven Zwang
+            gestellt wurde.
+          </p>
         </div>
-        <img class="bio-image"
+        <img
+          class="bio-image"
           src="https://i.imgur.com/rb7kyRf.png"
           alt="Markus (Tessa) Ganserer"
         />
@@ -111,12 +138,14 @@
 
         <div class="highlight-skandal-scale">
           <h4>Mode-Mut: 7/10</h4>
-    <p class="highlight-description">Ein wahrhaft mutiger Schritt und ein wichtiges Statement.</p>
-      </div>
-          <div class="gradient-bar-container">
-            <div class="gradient-bar-filled" style="width: 70%"></div>
-            <div class="gradient-bar-unfilled" style="width: 30%"></div>
-          </div>
+          <p class="highlight-description">
+            Ein wahrhaft mutiger Schritt und ein wichtiges Statement.
+          </p>
+        </div>
+        <div class="gradient-bar-container">
+          <div class="gradient-bar-filled" style="width: 70%"></div>
+          <div class="gradient-bar-unfilled" style="width: 30%"></div>
+        </div>
 
         <button class="toggle-button" onclick="toggleHighlight(this)">
           Details anzeigen <span class="arrow">▼</span>
@@ -126,28 +155,31 @@
           <p class="party-highlight-description">
             Tessa Ganserer sorgte im Februar 2023 mit ihrem Outfit in einer
             Ausschusssitzung des Bundestags für Aufregung. Sie erschien in einem
-            <b class="gruene">transparenten Top</b>, das viel Haut und ihren <b class="gruene">BH</b> sichtbar machte.
-            Dies führte zu Empörung bei Politikerinnen anderer Parteien, die das als
-            unangemessen für eine Sitzung des Deutschen Bundestages empfanden.
+            <b class="gruene">transparenten Top</b>, das viel Haut und ihren
+            <b class="gruene">BH</b> sichtbar machte. Dies führte zu Empörung
+            bei Politikerinnen anderer Parteien, die das als unangemessen für
+            eine Sitzung des Deutschen Bundestages empfanden.
           </p>
           <p class="party-highlight-description">
-            Besonders <b class="gruene">Kristina Schröder (CDU)</b> äußerte ihren Unmut und betonte,
-            dass keine ihrer ehemaligen Kolleginnen so in einer Sitzung erschienen
-            wäre. Dieser Vorfall lenkte die Aufmerksamkeit eher auf das Outfit als auf
-            die politische Diskussion, in der es um das <mark class="gruene">Selbstbestimmungsgesetz</mark>
+            Besonders <b class="gruene">Kristina Schröder (CDU)</b> äußerte
+            ihren Unmut und betonte, dass keine ihrer ehemaligen Kolleginnen so
+            in einer Sitzung erschienen wäre. Dieser Vorfall lenkte die
+            Aufmerksamkeit eher auf das Outfit als auf die politische
+            Diskussion, in der es um das
+            <mark class="gruene">Selbstbestimmungsgesetz</mark>
             für Trans-Personen ging.
           </p>
 
-        <div class="smallvideo-container">
-          <div class="video-wrapper">
-            <iframe
-              src="https://www.youtube.com/embed/D4kMJJ8XBBk?si=MOWAcAF8eDhvXPxM"
-              title="Ganserer in Reizwäsche im Bundestag"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
+          <div class="smallvideo-container">
+            <div class="video-wrapper">
+              <iframe
+                src="https://www.youtube.com/embed/D4kMJJ8XBBk?si=MOWAcAF8eDhvXPxM"
+                title="Ganserer in Reizwäsche im Bundestag"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
-        </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Februar 2023
@@ -174,33 +206,31 @@
     <section class="party-members">
       <h2 class="party-section-title">Weitere Mitglieder</h2>
       <ul class="party-members-list">
-          <li class="party-member-item">
-              <a href="../habeck/">Robert Habeck</a>
-          </li>
-          <li class="party-member-item">
-              <a href="../baerbock/">Annalena Baerbock</a>
-          </li>
-          <li class="party-member-item">
-              <a href="../lang/">Ricarda Lang</a>
-          </li>
-          <li class="party-member-item">
-              <a href="../goering-eckardt/">Katrin Göring-Eckardt</a>
-          </li>
-          <li class="party-member-item">
-              <a href="../fester/">Emilia Fester</a>
-          </li>
-          <li class="party-member-item">
-              <a href="../neubauer/">Luisa Neubauer</a>
-          </li>
+        <li class="party-member-item">
+          <a href="../habeck/">Robert Habeck</a>
+        </li>
+        <li class="party-member-item">
+          <a href="../baerbock/">Annalena Baerbock</a>
+        </li>
+        <li class="party-member-item">
+          <a href="../lang/">Ricarda Lang</a>
+        </li>
+        <li class="party-member-item">
+          <a href="../goering-eckardt/">Katrin Göring-Eckardt</a>
+        </li>
+        <li class="party-member-item">
+          <a href="../fester/">Emilia Fester</a>
+        </li>
+        <li class="party-member-item">
+          <a href="../neubauer/">Luisa Neubauer</a>
+        </li>
       </ul>
-  </section>
-  
+    </section>
 
     <footer class="party-footer">
       <p>&copy; 2025 factico.</p>
     </footer>
 
     <script src="../../script.js"></script>
-
   </body>
 </html>
