--- a/gruene/goering-eckardt/index.html
+++ b/gruene/goering-eckardt/index.html
@@ -45,49 +45,72 @@
           </p>
           <p><strong>Partei:</strong> Bündnis 90/Die Grünen</p>
           <p>
-            <strong>Aktuelles Amt:</strong> Vizepräsidentin des Deutschen
-            Bundestages (seit 2021)
+            <strong>Aktuelles Amt:</strong> Einfaches Mitglied des Deutschen
+            Bundestages (seit 1998 ununterbrochen dabei)
           </p>
 
           <h3>Bildung & Berufslaufbahn</h3>
           <p>
-            <strong>Studium:</strong> 1984 begann sie ein Germanistik- und
-            Theologiestudium an der Universität Leipzig, brach es jedoch ohne
-            Abschluss ab.
+            <strong>Studium:</strong> Der Klassiker der grünen Elite: Studium
+            der Theologie und Germanistik begonnen, aber nie beendet.
           </p>
           <p>
-            <strong>Berufserfahrung:</strong> Keine abgeschlossene Ausbildung
-            oder klassische Berufstätigkeit.
+            <strong>Berufserfahrung:</strong> Hat den Hörsaal direkt gegen den
+            Plenarsaal getauscht. Seit über 25 Jahren Berufspolitikerin ohne
+            Berührungspunkte mit dem normalen Arbeitsmarkt.
           </p>
 
           <h3>Politische Laufbahn</h3>
           <p>
-            <strong>Seit 2021:</strong> Vizepräsidentin des Deutschen
-            Bundestages
+            <strong>Seit 02/2025:</strong> Wieder MdB (Dank Listenplatz, trotz
+            Wahl-Debakel).
           </p>
           <p>
-            <strong>2013 – 2021:</strong> Fraktionsvorsitzende von Bündnis
-            90/Die Grünen im Bundestag
+            <strong>2021 – 2025:</strong> Vizepräsidentin des Deutschen
+            Bundestages.
           </p>
+          <p><strong>2013 – 2021:</strong> Fraktionsvorsitzende der Grünen.</p>
           <p>
-            <strong>2002 – 2005:</strong> Vizepräsidentin des Deutschen
-            Bundestages
-          </p>
-          <p>
-            <strong>1998 – heute:</strong> Mitglied des Deutschen Bundestages
+            <strong>Seit 1998:</strong> Dauerinventar des Deutschen Bundestages.
           </p>
 
           <h3>Politische Positionen</h3>
           <p>
-            <strong>Schwerpunkte:</strong> Klimaschutz, soziale Gerechtigkeit,
-            Integration & Migration
+            <strong>Schwerpunkte:</strong> Moralische Belehrungen, kirchlich
+            verbrämte Migrationspolitik und Kampf gegen "Rechts" (wobei für sie
+            alles rechts ist, was nicht grün wählt).
           </p>
 
           <h3>FACTS</h3>
           <p>
-            2024 verhängte Katrin Göring-Eckardt ein Ordnungsgeld gegen Beatrix
-            von Storch, nachdem diese Tessa Ganserer als „biologisch und
-            juristisch ein Mann“ bezeichnete.
+            <strong>Das 3-Prozent-Debakel:</strong>
+            Bei der Bundestagswahl 2025 zeigte sich eindrucksvoll, wie "beliebt"
+            KGE in ihrer Heimat wirklich ist. In ihrem Wahlkreis (Erfurt –
+            Weimar) erhielt sie katastrophale
+            <strong>3,1 % der Erststimmen</strong>. In der freien Wirtschaft
+            wäre das eine fristlose Kündigung, bei den Grünen reicht ein
+            sicherer Listenplatz, um weiter vom Steuerzahler alimentiert zu
+            werden.
+          </p>
+
+          <p>
+            <strong>Grüne Familienförderung ("Vetternwirtschaft"):</strong>
+            Im November 2022 genehmigte das grün geführte Außenministerium
+            (Baerbock) zwei Millionen Euro Steuergelder für den
+            Seenotrettungs-Verein <em>United4Rescue</em>. Ein glücklicher
+            Zufall: Im Vorstand des Vereins saß ausgerechnet Göring-Eckardts
+            Lebensgefährte. Während man anderen Parteien Korruption vorwirft,
+            nennt man das bei den Grünen wohl "Synergieeffekte".
+          </p>
+
+          <p>
+            <strong>Demokratieverständnis:</strong>
+            Als Bundestagsvizepräsidentin nutzte sie ihr Amt gerne für
+            ideologische Erziehungsmaßnahmen. Unvergessen, wie sie 2024 ein
+            Ordnungsgeld gegen Beatrix von Storch verhängte, nur weil diese die
+            biologische Realität benannte (dass Tessa Ganserer biologisch ein
+            Mann ist). Fakten werden bestraft, wenn sie nicht ins Weltbild
+            passen.
           </p>
           <p>
             Im Januar 2025 sorgte sie mit ihrer Aussage, dass Integration nicht
