--- a/gruene/habeck/index.html
+++ b/gruene/habeck/index.html
@@ -43,78 +43,82 @@
           <p><strong>Geburtsdatum & -ort:</strong> 2. September 1969, Lübeck</p>
           <p><strong>Partei:</strong> Bündnis 90/Die Grünen</p>
           <p>
-            <strong>Aktuelles Amt:</strong> Bundesminister für Wirtschaft und
-            Klimaschutz, Vizekanzler (seit 2021)
+            <strong>Aktuelles Amt:</strong> Keines. Ehemaliger Vizekanzler,
+            jetzt "Senior Analyst" in Dänemark und "Distinguished Global Leader"
+            in den USA.
           </p>
 
           <h3>Bildung & Berufslaufbahn</h3>
           <p>
-            <strong>Studium:</strong> Germanistik, Philosophie und Philologie in
-            Freiburg und Hamburg, Abschluss als Doktor der Philosophie.
+            <strong>Studium:</strong> Germanistik und Philosophie. Seine
+            Promotion qualifizierte ihn offenbar hervorragend dafür, als
+            Wirtschaftsminister die deutsche Industrie philosophisch zu
+            dekonstruieren.
           </p>
           <p>
-            <strong>Berufserfahrung:</strong> Vor der politischen Karriere als
-            Kinderbuchautor und Belletristik-Schriftsteller tätig, ohne
-            wissenschaftliche Publikationen oder berufliche Erfahrung außerhalb
-            des Literaturbetriebs.
+            <strong>Berufserfahrung:</strong> Kinderbuchautor. Kritiker sagen,
+            das merkte man seiner Wirtschaftspolitik an: Viele bunte
+            Geschichten, aber wenig Bezug zur harten Realität. Jetzt, nach dem
+            politischen Scheitern, kehrt er in den akademischen Elfenbeinturm
+            zurück (Unis in Dänemark & USA).
           </p>
 
           <h3>Politische Laufbahn</h3>
           <p>
-            <strong>Seit 2021:</strong> Vizekanzler und Bundesminister für
-            Wirtschaft und Klimaschutz
+            <strong>Seit 09/2025:</strong> Rückzug aus der deutschen Politik.
+            Neuer Job: Welt erklären (Dänemark, USA, Podcast).
           </p>
           <p>
-            <strong>2018 – 2022:</strong> Parteivorsitzender von BÜNDNIS 90/DIE
-            GRÜNEN
+            <strong>2021 – 2025:</strong> Vizekanzler und Wirtschaftsminister
+            (Kabinett Scholz).
           </p>
-          <p>
-            <strong>2017 – 2018:</strong> Stellvertretender Ministerpräsident
-            und Minister für Energiewende, Landwirtschaft, Umwelt, Natur und
-            Digitalisierung des Landes Schleswig-Holstein
-          </p>
-          <p>
-            <strong>2012 – 2017:</strong> Stellvertretender Ministerpräsident
-            und Minister für Energiewende, Landwirtschaft, Umwelt und Ländliche
-            Räume des Landes Schleswig-Holstein
-          </p>
-          <p>
-            <strong>2009 – 2012:</strong> Fraktionsvorsitzender der Grünen im
-            Landtag Schleswig-Holstein
-          </p>
-          <p>
-            <strong>2008 – 2009:</strong> Fraktionsvorsitzender im Kreistag
-            Schleswig-Flensburg
-          </p>
-          <p>
-            <strong>2004 – 2009:</strong> Landesvorsitzender von BÜNDNIS 90/DIE
-            GRÜNEN in Schleswig-Holstein
-          </p>
-          <p>
-            <strong>2002 – 2004:</strong> Kreisvorsitzender von BÜNDNIS 90/DIE
-            GRÜNEN in Schleswig-Flensburg
-          </p>
-          <p><strong>Seit 2002:</strong> Mitglied bei BÜNDNIS 90/DIE GRÜNEN</p>
+          <p><strong>2018 – 2022:</strong> Grünen-Chef.</p>
+          <p><strong>2012 – 2018:</strong> Minister in Schleswig-Holstein.</p>
 
           <h3>Politische Positionen</h3>
           <p>
-            <strong>Schwerpunkte:</strong> Energiewende, Klimaschutz,
-            Wirtschafts- und Industriepolitik
+            <strong>Schwerpunkte:</strong> Wärmepumpen-Zwang, philosophische
+            Insolvenz-Erklärungen und moralische Weltrettung auf Kosten der
+            Wirtschaftskraft.
           </p>
 
           <h3>FACTS</h3>
           <p>
-            Habeck fiel wiederholt durch Wissenslücken in der Wirtschaftspolitik
-            auf: Er verwechselte die BaFin mit dem Finanzamt, war ahnungslos bei
-            Bankenregulierungen und erklärte, Unternehmen könnten einfach
-            aufhören zu verkaufen, ohne pleitezugehen.
+            Robert Habeck ist Geschichte. Nach dem Wahldebakel 2025 (bei dem er
+            sogar sein Direktmandat in der Heimat verlor) zog er im August 2025
+            die Reißleine und flüchtete aus dem Bundestag. Statt
+            Oppositionsarbeit zu leisten, lässt er sich nun lieber im Ausland
+            als „Distinguished Global Leader“ feiern und macht Podcasts im
+            Berliner Ensemble.
           </p>
+
           <p>
-            Habeck stand außerdem unter anderem wegen
-            Vetternwirtschaftsvorwürfen 2023 und dem gescheiterten
-            Heizungsmodernisierungsgesetz in der Kritik.
+            <strong>Seine Bilanz als Minister:</strong>
+            Er hinterlässt ein Land in der Rezession. Unvergessen seine
+            ökonomischen Glanzleistungen: Die Verwechslung von BaFin und
+            Finanzamt, die Aussage, Firmen würden nicht pleitegehen, sondern nur
+            „aufhören zu produzieren“, und natürlich das
+            <strong>Heizungsgesetz-Desaster</strong>. Letzteres wollte er mit
+            der Brechstange durchsetzen, was zu Panik bei Hausbesitzern und dem
+            Absturz der Grünen führte.
           </p>
-          <p>Zudem stimmte Habeck 2022 für die allgemeine Corona-Impfpflicht.</p>
+
+          <p>
+            <strong>Vetternwirtschaft ("Trauzeugen-Affäre"):</strong>
+            2023 installierte er seinen engen Vertrauten Patrick Graichen als
+            Staatssekretär, der wiederum familiäre Verflechtungen in die
+            Öko-Lobby hatte (Trauzeuge, Schwester, Bruder). Erst nach massivem
+            öffentlichen Druck musste Graichen gehen. Habeck nannte es einen
+            Fehler, Kritiker nannten es Clan-Strukturen.
+          </p>
+
+          <p>
+            <strong>Impfpflicht:</strong>
+            Nicht zu vergessen: Robert Habeck stimmte 2022 im Bundestag
+            <strong>für die allgemeine Corona-Impfpflicht</strong> und damit für
+            einen massiven staatlichen Eingriff in die körperliche
+            Unversehrtheit der Bürger.
+          </p>
         </div>
 
         <img
